Update list_view.scss, add CSS class for decoration-hidden option

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -253,3 +253,8 @@
         }
     }
 }
+
+//tree decoration-xxxxxxx extension to add decoration-hidden option
+tr.text-hidden {
+  display: none;
+}
