added cgt-green decoration

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -258,3 +258,7 @@
 tr.text-hidden {
   display: none;
 }
+//tree decoration-xxxxxxx extension to add decoration-cgt-green option
+tr.text-cgt-green {
+  color: #93c841;
+}
