added cgt-green decoration

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -261,4 +261,5 @@ tr.text-hidden {
 //tree decoration-xxxxxxx extension to add decoration-cgt-green option
 tr.text-cgt-green {
   color: #93c841;
+  font-weight: bold;
 }
