--- a/addons/report_intrastat/report/report_intrastat_report.xml
+++ b/addons/report_intrastat/report/report_intrastat_report.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <report 
+    <report
         id="account_intrastatinvoices"
         model="account.invoice"
-        string="Intrastat Invoices"
+        string="Detailed Invoices"
         report_type="qweb-pdf"
         name="report_intrastat.report_intrastatinvoice"
         file="report_intrastat.report_intrastatinvoice"
